@@ -2,6 +2,13 @@
 
 __version__ = '0.2.7'
 
+# Add revision number for development versions
+#_branch = 'release'
+_branch = 'dev'
+_revision = ''.join(x for x in '$Revision$' if x.isdigit())
+if _branch != 'release' and _revision:
+	__version__ += '+r' + _revision
+
 from . import arts
 from . import files
 from . import utils
