@@ -1,3 +1,9 @@
+2016-02-29  Oliver Lemke  <olemke@core-dump.info>
+
+	* typhon/__init__.py:
+
+	Add revision to version number for development releases.
+
 2016-02-26  Oliver Lemke  <olemke@core-dump.info>
 
 	* typhon/datasets/__init__.py: Fix typo in import.
